mx-samba-config (0.21.12.04) mx; urgency=medium

  * Fix: adding samba share if guest_ok=n
  * Some performances fixes, noticeable mostly on Raspberry Pi

 -- Adrian <adrian@mxlinux.org>  Fri, 31 Dec 2021 16:06:22 -0500

mx-samba-config (0.21.12.03) mx; urgency=medium

  * Add busy indicator when starting/stopping/enabling Samba

 -- Adrian <adrian@mxlinux.org>  Thu, 30 Dec 2021 18:27:46 -0500

mx-samba-config (0.21.12.02) mx; urgency=medium

  * Check if user is part of smabashare group (needed for MX-19 and RPi versions)

 -- Adrian <adrian@mxlinux.org>  Thu, 30 Dec 2021 12:00:13 -0500

mx-samba-config (0.21.12.01) mx; urgency=medium

  * Version bump. Changes listed in github repo

 -- Adrian <adrian@mxlinux.org>  Sun, 26 Dec 2021 21:06:18 -0500

mx-samba-config (0.21.12) mx; urgency=medium

  * Initial build

 -- Adrian <adrian@mxlinux.org>  Thu, 16 Dec 2021 19:14:52 -0500