@@ -12,20 +12,20 @@ Build-Depends: debhelper (>= 10), qtbase5-dev, qttools5-dev-tools
 Package-List:
  mx-samba-config deb admin optional arch=any
 Checksums-Sha1:
- 91a7545af0f65c6ae9a72a6ebe5809507e54a763 19780 mx-samba-config_0.21.12.04.tar.xz
+ eebb64ee70c8067f43c164c3ccbcd7c3a1d6848f 19832 mx-samba-config_0.21.12.04.tar.xz
 Checksums-Sha256:
- 4b38d53f5206249680f86aaa3834153c3622176a5b3be5a27f50b8b493a0fb47 19780 mx-samba-config_0.21.12.04.tar.xz
+ d4c00695cb5f133c9dc717d7e5d539c714dea48fca5df5ddba4e62da752e7a2e 19832 mx-samba-config_0.21.12.04.tar.xz
 Files:
- c73dabe4dc47adec02b391c09a7adf56 19780 mx-samba-config_0.21.12.04.tar.xz
+ ff0a1f89c7b6e0cec902b52b0ed83529 19832 mx-samba-config_0.21.12.04.tar.xz
 
 -----BEGIN PGP SIGNATURE-----
 
-iQFHBAEBCgAxFiEE8ndToY6S45N+YzXncJOMeAZ57pgFAmHPgPsTHGFkcmlhbkBt
-eGxpbnV4Lm9yZwAKCRBwk4x4BnnumPvzCACjFAul53K+hGTWvrd5eOOuv0+N0yiZ
-ogyiiXlEIK3Y5LAgGQd04d48uGGJ99sb4PbOpQ2bwKpI377VmQ2XQDMGN170wGh4
-8l45SiRpEbxxYTSsHzBY3WWWM825kMMwbTLvggQviBEQVXy0tCBaw6r+i0LQ9e3g
-xOKLe1P0BXt9L+WjfJ78AO5yCOLaL7Z1kRJ4R2IZNljBSWtXFmXjU8KgP+SEvbXX
-JRIP07mSePknFUzSslcMorz0nManmTUFDJogF2B7Nz0zge5TRWTb4cPzijUR6sKN
-6m+zO7bgXq4ebuVjeUzP68cH93NGkpqwN7opYElHjavDoqaxjIGLtzsW
-=F/dy
+iQFHBAEBCgAxFiEE8ndToY6S45N+YzXncJOMeAZ57pgFAmHPhwwTHGFkcmlhbkBt
+eGxpbnV4Lm9yZwAKCRBwk4x4BnnumL1NCACyXD5OM7H2GXJ82WUPsuctM+b/ckJw
+mvWuYA1911T0na4yf9JYdLgXRcMc0KLL/QBrjc1YH77irkpYcubSNH9UsiefFcP9
+sPZbQytbfddD37GCo/S+K5li4o/j0JeQ30wFPabqRsGfAb7L+YXbZpDv8S2NrAbp
+ueNuYiSPT7/EQFjFKlARjoSSkWPML0+3my/uj2GYHhIpkr46ra8wXj8EnoJPb5uw
+ZulvKEQeWJagKrRpZNPQ2jg1vtAKJniC0R2Fo8CXorGCWFIcik4+fQ0CP97w2/6o
+oR5gYEDJrtQzQ2ug0wxa8O2HZCC1Wuu26srHuLXk9DbjbzOxSSeOVO2Q
+=AzTP
 -----END PGP SIGNATURE-----
