@@ -17,31 +17,32 @@ Changes:
  mx-samba-config (0.21.12.04) mx; urgency=medium
  .
    * Fix: adding samba share if guest_ok=n
+   * Display error message in case it fails to add share
    * Some performances fixes, noticeable mostly on Raspberry Pi
 Checksums-Sha1:
- c82c6b6a25b4c0682ef7d6ae2dc8b9b309017b6b 1162 mx-samba-config_0.21.12.04.dsc
- 91a7545af0f65c6ae9a72a6ebe5809507e54a763 19780 mx-samba-config_0.21.12.04.tar.xz
- e21b578f3f7fdb02ff1d8ed15245640f5eb0017e 10812 mx-samba-config_0.21.12.04_amd64.buildinfo
- 43313cdadfcd10167cff1bf2eea3a7d860dc7083 45304 mx-samba-config_0.21.12.04_amd64.deb
+ 1fa28b9ad1faaa6c073106bd08a6730975a90c28 1162 mx-samba-config_0.21.12.04.dsc
+ eebb64ee70c8067f43c164c3ccbcd7c3a1d6848f 19832 mx-samba-config_0.21.12.04.tar.xz
+ 624ae25d71391220f3803cfa521283e6d1e95fa4 10812 mx-samba-config_0.21.12.04_amd64.buildinfo
+ 348e15d8650f8a4050964e3ae3987d83a55acc65 45588 mx-samba-config_0.21.12.04_amd64.deb
 Checksums-Sha256:
- 4a6b7986aeb5abdd6e70b4d9ac272180b6a853d7d2e6ef3840ccdedf13759021 1162 mx-samba-config_0.21.12.04.dsc
- 4b38d53f5206249680f86aaa3834153c3622176a5b3be5a27f50b8b493a0fb47 19780 mx-samba-config_0.21.12.04.tar.xz
- 4b2ad5877c477c6852d45428958ff7d4c04d35231e36deb9f81bc294752b4d79 10812 mx-samba-config_0.21.12.04_amd64.buildinfo
- 9adfbd3589949f397b1004fe5151221299b334fc68bc6bb868ed0b26c2cc98de 45304 mx-samba-config_0.21.12.04_amd64.deb
+ ce7ba44fcc66d50710de94a52316513dfebacec759aee5b709f6f7a04b784a99 1162 mx-samba-config_0.21.12.04.dsc
+ d4c00695cb5f133c9dc717d7e5d539c714dea48fca5df5ddba4e62da752e7a2e 19832 mx-samba-config_0.21.12.04.tar.xz
+ 17e4c2bc69260eae230c5ec89bc1719b1ad72a0450e548296d0b84d8588e3f4e 10812 mx-samba-config_0.21.12.04_amd64.buildinfo
+ fd10b5ce464f23e74492df2c72220a8c82497feb6847c0e239b43d12d02eb7b6 45588 mx-samba-config_0.21.12.04_amd64.deb
 Files:
- a28e9bd90c6c2c5d6c25c078ac58218a 1162 admin optional mx-samba-config_0.21.12.04.dsc
- c73dabe4dc47adec02b391c09a7adf56 19780 admin optional mx-samba-config_0.21.12.04.tar.xz
- 17b323a62625713f3788ac014d929992 10812 admin optional mx-samba-config_0.21.12.04_amd64.buildinfo
- 30a05775799946760d2dcc00e1052d40 45304 admin optional mx-samba-config_0.21.12.04_amd64.deb
+ af7eecf30d5dce28a9ece17d93ff309d 1162 admin optional mx-samba-config_0.21.12.04.dsc
+ ff0a1f89c7b6e0cec902b52b0ed83529 19832 admin optional mx-samba-config_0.21.12.04.tar.xz
+ 81858c2eb619ae9750d453e8a5bffeb3 10812 admin optional mx-samba-config_0.21.12.04_amd64.buildinfo
+ f3ecc497a319aeaed5ff83f4a8fafcd7 45588 admin optional mx-samba-config_0.21.12.04_amd64.deb
 
 -----BEGIN PGP SIGNATURE-----
 
-iQFHBAEBCgAxFiEE8ndToY6S45N+YzXncJOMeAZ57pgFAmHPgScTHGFkcmlhbkBt
-eGxpbnV4Lm9yZwAKCRBwk4x4BnnumAmjCACrDlwAL0h86RYNbOj0kO1J1y7wxmzU
-gFPDvCWdHwtCKQQVeanAPmm16kCGSwmd74NmlKjOAmBeJfoxC//SJn7WHJmxuVzs
-ZyJm7r+lv5EUkFxFx42aUGYvOt4MSBsUVuQgA9l9EQ5XXiXFMXfpZvnIO+bPrmqC
-p63jAt2qqCN11Mg7hSVt2J17CZxg6UEnH7DHky0slL03l3U2EqzJT9kz13xwYULs
-Vy1p1AqJxtyDylFxaURXg0n2tG/3EL+pTqOzH3CCn37a8BpiwwV+V/f68iO5UmMH
-TtKOuOj8vx1dntBPbaDm+Qp2i85bVSR7Kk0JOP6IWdy2V9DKVhkUqcY+
-=JKgt
+iQFHBAEBCgAxFiEE8ndToY6S45N+YzXncJOMeAZ57pgFAmHPhwwTHGFkcmlhbkBt
+eGxpbnV4Lm9yZwAKCRBwk4x4BnnumODeB/4w3BaQ9OLkk5lnVK+BDeKzTfpc7fZS
+Ox+zWTP4bAh6UYxDyGg9sxDbuQGhUt6sopcSDp3Uf2MfM4ljab9dsNL9i6OkvpqE
+kLVp4kuo3T/PPq2LUSeP+n4+4N7cPm6vSQnpW5dGkYWp7EcriErSMnYhErAIEAzr
+vSJI8d9QOdvjfY8saXJ2IsN9SNXW7jhreIHf3eTxWs8wIUmXe9kyTdigLvDHRpur
+8oUphWYHGKkzn+A9JocRAmYY0euyXcwQ2G3fEzVOny7+drn2BFRnkvKJf6Hd1zfv
+YlKqUjLoLtKAATz/Megj5f+lO/x8m+r6Ri5Tg+h1QC0whiHB4kQrTYLO
+=QDPM
 -----END PGP SIGNATURE-----
